RESOLVED FIXED230865
[BigSur wk2 Debug iOS14 ] webrtc/video-mute.html is a flaky failure
https://bugs.webkit.org/show_bug.cgi?id=230865
Summary [BigSur wk2 Debug iOS14 ] webrtc/video-mute.html is a flaky failure
Eric Hutchison
Reported 2021-09-27 15:46:35 PDT
webrtc/video-mute.html is a flaky failure on BigSur wk2 Debug arm64 and iOS14.. History: https://results.webkit.org/?suite=layout-tests&test=webrtc/video-mute.html Results: https://ews-build.webkit.org/#/builders/60/builds/12860, https://ews-build.s3-us-west-2.amazonaws.com/macOS-AppleSilicon-Big-Sur-Debug-WK2-Tests-EWS/r439365-12860/results.html Diff: No crash log found for GPUProcess:18390. stdout: stderr: LEAK: 1 WebPageProxy 11:33:26.419 11060 worker/3 worker/3 webrtc/video-mute.html crashed, (stderr lines): 11:33:26.419 11060 worker/3 LEAK: 1 WebPageProxy 11:33:26.422 11060 [57699/57707] webrtc/video-mute.html failed unexpectedly (GPUProcess crashed [pid=18390]) 11:33:26.422 11060 worker/3 killing driver 11:33:26.469 11060 worker/3 webrtc/video-mute.html failed: 11:33:26.469 11060 worker/3 GPUProcess crashed [pid=18390] --- /Volumes/Data/worker/ios-simulator-14-debug-tests-wk2/build/layout-test-results/webrtc/video-mute-expected.txt +++ /Volumes/Data/worker/ios-simulator-14-debug-tests-wk2/build/layout-test-results/webrtc/video-mute-actual.txt @@ -3,7 +3,7 @@ PASS Setting video exchange -PASS Ensuring connection state is connected +FAIL Ensuring connection state is connected promise_test: Unhandled rejection with value: "Test timed out" PASS Track is enabled, video should not be black PASS Track is disabled, video should be black PASS If disabled, black frames should still be coming
Attachments
Patch (2.03 KB, patch)
2021-09-28 10:04 PDT, youenn fablet
no flags
Radar WebKit Bug Importer
Comment 1 2021-09-27 15:46:57 PDT
Eric Hutchison
Comment 2 2021-09-27 15:52:14 PDT
youenn fablet
Comment 3 2021-09-28 10:04:50 PDT
EWS
Comment 4 2021-09-28 12:06:51 PDT
Committed r283186 (242234@main): <https://commits.webkit.org/242234@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 439491 [details].
Note You need to log in before you can comment on or make changes to this bug.