[BigSur wk2 Debug iOS14 ] webrtc/video-mute.html is a flaky failure https://bugs.webkit.org/show_bug.cgi?id=230865 <rdar://problem/83594770>

Reviewed by Eric Carlson.

Covered by webrtc/video-mute.html being no longer flaky.

* Modules/mediastream/libwebrtc/LibWebRTCIceTransportBackend.cpp:
(WebCore::LibWebRTCIceTransportBackendObserver::start):


Canonical link: https://commits.webkit.org/242234@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283186 268f45cc-cd09-0410-ab3c-d52691b4dbfc